# webuitest

./: img-deal.py
lib/: Makefile.am  common.json  config.ini  controller_test.py  debug.py  destroy_data.json  element_css.json  element_id.json  element_xpath.json  exescript.py  get_config.py  get_element.py  get_js.py  helper.py  log_tracker.py  logger.py  openstack_command.py  run_command.py  webuitest.py  webuitest_normal.py
test/: insert_list.py
test/control_panel/: Makefile.am  check_ceph_and_mysql_status.py  check_create_external_subnet.py  check_create_internal_subnet.py  check_create_network.py  check_create_project.py  check_create_user.py  check_daemon.py  check_download_image.py  check_nova_service_list.py  check_openstack_service_list.py  check_port.py  check_process.py  check_stack_status.py  check_upload_image.py  daemon.json  ip_port.json  method.json  openstackservice.json  process.json
test/govcloud/: Makefile.am  apitest.py  testcase.xlsx
test/performance/: Makefile.am  config.ini  fio_distribute.json  fio_test.json  iozone_distribute.json  iozone_test.json  stream.json  test_cli_container.py  test_cli_create_instance.py  test_cli_snapshot.py  test_cli_start_and_delete_instance.py  test_cli_volume.py  test_log_sample.py  test_user_performance.py  test_vm_fio.py  test_vm_fio_distribute.py  test_vm_iozone.py  test_vm_iozone_distribute.py  test_vm_netperf_distributed.py  test_vm_stream.py  test_vm_unixbench.py  test_vm_unixbench_distributed.py  test_vxlan.py  unixbench.json  unixbench_distributed.json  user_performance.json
test/rally/: Makefile.am  boot-and-associate-floating-ip.yaml  boot-and-delete.yaml  boot-and-list.yaml  boot-and-live-migrate.yaml  boot-from-volume.yaml  create-and-delete-floating-ips.yaml  create-and-delete-image.yaml  create-and-delete-networks.yaml  create-and-list-floating-ips.yaml  create-and-list-image.yaml  create-and-list-networks.yaml  create-from-image-and-delete-volume.yaml  rally.json  resize-server.yaml  test_rally.py
test/saod/: Makefile.am  config.ini  test_log_in.py  webuitest.py
test/tempest/: Makefile.am  all_test.ini  generate_config.sh  run_tempest.py  tempest.conf
test/webui/: Makefile.am  button_existence.json  glance.json  heat.json  keystone.json  neutron.json  normal_button_existence.json  nova.json  swift.json  test.json  test.py  test_button_existence.py  test_glance.py  test_heat.py  test_keystone.py  test_neutron.py  test_normal_acceptance.py.bak  test_normal_button_existence.py  test_nova.py  test_swift.py  test_volume.py  testok.json  tolist.json  volume.json
test/xsky/: Makefile.am  ceph_block_storage_throughput_performance.py  ceph_ha_test.py  ceph_throughput_test.py
