libs_SCRIPTS = controller_test.py  \
               helper.py \
               config.ini \
               element_css.json \
               element_xpath.json \
               get_config.py \
               get_js.py \
               webuitest.py \
               element_id.json \
               exescript.py \
               logger.py \
               log_tracker.py \
               debug.py \
               destroy_data.json \
               common.json \
               get_element.py \
               run_command.py \
               webuitest_normal.py

libsdir = /opt/dddd-test/lib/
EXTRA_DIST = ${libs_SCRIPTS}
