control_panel_SCRIPTS = check_ceph_and_mysql_status.py \
                        check_create_network.py \
                        check_daemon.py \
                        check_openstack_service_list.py \
                        check_upload_image.py  \
                        check_create_external_subnet.py \
                        check_create_project.py \
                        check_download_image.py \
                        check_process.py \
                        check_create_internal_subnet.py \
                        check_create_user.py \
                        check_nova_service_list.py \
                        check_stack_status.py \
                        __init__.py \
                        daemon.json \
                        method.json \
                        process.json \
                        config.ini \
                        check_port.py \
                        ip_port.json \
                        openstackservice.json

control_paneldir = /opt/dddd-test/test/control_panel/
EXTRA_DIST = ${control_panel_SCRIPTS}
