performance_SCRIPTS = config.ini \
                      iozone_distribute.json \
                      test_cli_container.py \
                      test_cli_volume.py \
                      test_vm_iozone.py \
                      test_vm_unixbench.py \
                      test_cli_create_instance.py \
                      test_vm_fio_distribute.py \
                      test_vm_netperf_distributed.py \
                      test_vxlan.py \
                      test_cli_snapshot.py \
                      test_vm_fio.py \
                      test_vm_stream.py \
                      __init__.py \
                      test_user_performance.py \
                      test_cli_start_and_delete_instance.py \
                      test_vm_iozone_distribute.py \
                      test_vm_unixbench_distributed.py \
                      user_performance.json \
                      fio_test.json \
                      unixbench_distributed.json \
                      stream.json \
                      fio_distribute.json \
                      iozone_test.json \
                      unixbench.json

performancedir = /opt/dddd-test/test/performance/
EXTRA_DIST = ${performance_SCRIPTS}
