rally_SCRIPTS = boot-and-associate-floating-ip.yaml \
                create-and-delete-routers.yaml \
                create-and-list-tenants.yaml \
                list-and-download-objects-in-containers.yaml \
                boot-and-delete.yaml \
                create-and-delete-subnets.yaml \
                create-and-list-users.yaml \
                list-objects-in-containers.yaml \
                boot-and-list.yaml \
                create-and-delete-volume.yaml \
                create-and-list-volume.yaml \
                boot-and-live-migrate.yaml \
                create-and-list-floating-ips.yaml \
                create-container-and-object-then-delete-all.yaml \
                rally.json \
                boot-from-volume.yaml \
                create-and-list-image.yaml \
                create-container-and-object-then-list-objects.yaml \
                resize-server.yaml \
                create-and-delete-floating-ips.yaml \
                create-and-list-networks.yaml \
                create-from-image-and-delete-volume.yaml \
                create-and-delete-image.yaml \
                create-and-list-routers.yaml \
                create-tenant-with-users.yaml \
                create-and-delete-networks.yaml \
                create-and-list-subnets.yaml \
                test_rally.py

rallydir = /opt/dddd-test/test/rally/
EXTRA_DIST = ${rally_SCRIPTS}
