webui_SCRIPTS = test_keystone.py \
                test_volume.py \
                test_neutron.py \
                test_button_existence.py \
                test_nova.py \
                __init__.py \
                test_glance.py \
                test_swift.py \
                glance.json \
                swift.json \
                neutron.json \
                keystone.json \
                volume.json \
                button_existence.json \
                nova.json

webuidir = /opt/dddd-test/test/webui/
EXTRA_DIST = ${webui_SCRIPTS}
